# rag_example

./: pyproject.toml
01_Basic/: 01-OpenAI-APIKey.ipynb  02-OpenAI-LLM.ipynb  03-LCEL.ipynb  04-LCEL_Advanced.ipynb  05-Runnable.ipynb
02-Prompt/: 01-PromptTemplate.ipynb  02-FewShotTemplates.ipynb  03-LangChain-Hub.ipynb
19-Streamlit/01-MyProject/: main.py
19-Streamlit/01-MyProject/pages/: 01_PDF.py
19-Streamlit/01-MyProject/prompts/: general.yaml  pdf-rag.yaml  sns.yaml  summary.yaml
19-Streamlit/MyProject/: main.py
